# Young-Hearts-Agent-Platform-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/agents/: CommitLens.agent.md  Prompt-Engineer.agent.md  Researcher.agent.md
.github/prompts/: design-functions.prompt.md  design-program-structure.prompt.md  design-tech-stack.prompt.md  research_codebase.prompt.md
0-prompts/: run_agent.md  项目基本信息.md
0-prompts/commands/处理特定问题/: 1-research_codebase.md  2-create_plan.md  3-implement_plan.md
0-prompts/commands/项目设计/: 1-design_functions.md  2-design_tech_stack.md  3-design_backend_structure.md
0-prompts/settings/: 1-product_manager.md  2-architect.md
app/: main.py
app/api/v1/routes/: auth.py  users.py
app/core/: config.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth.py  user_service.py
docs/: 2026-01-11-“心青年”智能体平台-功能文档.md  “心青年”智能体平台-技术栈设计.md  “心青年”智能体平台-数据模型与 API 设计.md
docs/prompts-design/: 2026-01-11_Researcher_提示词最终版.md  2026-01-11_功能文档撰写命令_提示词最终版.md  2026-01-11_技术栈设计_提示词最终版.md  2026-01-11_项目结构设计_提示词最终版.md
docs/tasks/01-数据库配置/: 2025-12-28_为项目配置MySQL数据库.md
docs/tasks/01-用户管理/: 2026-01-14_User数据结构设计_研究报告.md
docs/tasks/02-后端用户身份控制/: 2026-01-14_后端用户身份控制_研究报告.md
docs/tasks/02-用户管理/: 2025-12-28_用户管理_研究报告.md  2025-12-28_用户管理_计划书.md  2026-01-11_用户管理_研究报告.md
docs/tasks/03-知识库问答/: 2025-12-29_如何实现知识库问答_研究报告.md  2025-12-29_知识库问答_计划书.md
docs/tasks/罗问然/05-分角色注册功能/: 2026-01-16_分角色注册功能_研究报告.md
docs/tasks/谢君韬/00-知识库的搭建/: 2026-01-17_知识库的搭建_实现计划.md  2026-01-17_知识库的搭建_研究报告.md
tests/: test_users.py
