[project]
name = "young-hearts-agent-platform-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "passlib==1.7.4",
    "pydantic==2.12.5",
    "pydantic_settings==2.12.0",
    "python_jose==3.5.0",
    "SQLAlchemy==2.0.45",
]
